target/generated-sources/antlr4/MATLABParser.java
// Generated from MATLAB.g4 by ANTLR 4.4
import org.antlr.v4.runtime.atn.*;
import org.antlr.v4.runtime.dfa.DFA;
import org.antlr.v4.runtime.*;
import org.antlr.v4.runtime.misc.*;
import org.antlr.v4.runtime.tree.*;
import java.util.List;
import java.util.Iterator;
import java.util.ArrayList;

@SuppressWarnings({"all", "warnings", "unchecked", "unused", "cast"})
public class MATLABParser extends Parser {
	static { RuntimeMetaData.checkVersion("4.4", RuntimeMetaData.VERSION); }

	protected static final DFA[] _decisionToDFA;
	protected static final PredictionContextCache _sharedContextCache =
		new PredictionContextCache();
	public static final int
		NL=1, BREAK=2, CASE=3, CATCH=4, CONTINUE=5, ELSE=6, ELSEIF=7, END=8, FOR=9, 
		FUNCTION=10, GLOBAL=11, IF=12, OTHERWISE=13, PERSISTENT=14, RETURNS=15, 
		SWITCH=16, TRY=17, VARARGIN=18, WHILE=19, CLEAR=20, ENDS=21, DOUBLE_EQ=22, 
		LOG_OR=23, LOG_AND=24, LSTE=25, GRTE=26, NEQ=27, EL_TIMES=28, EL_LEFTDIV=29, 
		EL_RIGHTDIV=30, EL_EXP=31, EL_CCT=32, EQ=33, BIN_OR=34, BIN_AND=35, LST=36, 
		GRT=37, COLON=38, PLUS=39, MINUS=40, NEG=41, TIMES=42, LEFTDIV=43, RIGHTDIV=44, 
		EXP=45, CCT=46, SEMI=47, LPAREN=48, RPAREN=49, LBRACE=50, RBRACE=51, LSBRACE=52, 
		RSBRACE=53, AT=54, DOT=55, COMMA=56, BLOCKCOMMENT=57, COMMENT=58, THREEDOTS=59, 
		ID=60, INT=61, FLOAT=62, STRING=63, WS=64;
	public static final String[] tokenNames = {
		"<INVALID>", "'\n'", "'break'", "'case'", "'catch'", "'continue'", "'else'", 
		"'elseif'", "'end'", "'for'", "'function'", "'global'", "'if'", "'otherwise'", 
		"'persistent'", "'return'", "'switch'", "'try'", "'varargin'", "'while'", 
		"'clear'", "ENDS", "'=='", "'||'", "'&&'", "'<='", "'>='", "'~='", "'.*'", 
		"'./'", "'.\\'", "'.^'", "'.''", "'='", "'|'", "'&'", "'<'", "'>'", "':'", 
		"'+'", "'-'", "'~'", "'*'", "'/'", "'\\'", "'^'", "'''", "';'", "'('", 
		"')'", "'{'", "'}'", "'['", "']'", "'@'", "'.'", "','", "BLOCKCOMMENT", 
		"COMMENT", "THREEDOTS", "ID", "INT", "FLOAT", "STRING", "WS"
	};
	public static final int
		RULE_file = 0, RULE_functionMFile = 1, RULE_f_def_line = 2, RULE_f_input = 3, 
		RULE_f_argument_list = 4, RULE_f_body = 5, RULE_scriptMFile = 6, RULE_statement = 7, 
		RULE_assignment = 8, RULE_entity_reference = 9, RULE_activity_reference = 10, 
		RULE_argument_list = 11, RULE_list_reference = 12, RULE_list = 13, RULE_command_form = 14, 
		RULE_command_args = 15, RULE_for_command = 16, RULE_if_command = 17, RULE_global_command = 18, 
		RULE_while_command = 19, RULE_return_command = 20, RULE_expr = 21;
	public static final String[] ruleNames = {
		"file", "functionMFile", "f_def_line", "f_input", "f_argument_list", "f_body", 
		"scriptMFile", "statement", "assignment", "entity_reference", "activity_reference", 
		"argument_list", "list_reference", "list", "command_form", "command_args", 
		"for_command", "if_command", "global_command", "while_command", "return_command", 
		"expr"
	};

	@Override
	public String getGrammarFileName() { return "MATLAB.g4"; }

	@Override
	public String[] getTokenNames() { return tokenNames; }

	@Override
	public String[] getRuleNames() { return ruleNames; }

	@Override
	public String getSerializedATN() { return _serializedATN; }

	@Override
	public ATN getATN() { return _ATN; }

	public MATLABParser(TokenStream input) {
		super(input);
		_interp = new ParserATNSimulator(this,_ATN,_decisionToDFA,_sharedContextCache);
	}
	public static class FileContext extends ParserRuleContext {
		public ScriptMFileContext scriptMFile() {
			return getRuleContext(ScriptMFileContext.class,0);
		}
		public FunctionMFileContext functionMFile() {
			return getRuleContext(FunctionMFileContext.class,0);
		}
		public FileContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_file; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof MATLABListener ) ((MATLABListener)listener).enterFile(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof MATLABListener ) ((MATLABListener)listener).exitFile(this);
		}
	}

	public final FileContext file() throws RecognitionException {
		FileContext _localctx = new FileContext(_ctx, getState());
		enterRule(_localctx, 0, RULE_file);
		try {
			setState(46);
			switch (_input.LA(1)) {
			case EOF:
			case NL:
			case FOR:
			case GLOBAL:
			case IF:
			case RETURNS:
			case WHILE:
			case PLUS:
			case MINUS:
			case NEG:
			case LPAREN:
			case ID:
			case INT:
			case FLOAT:
				enterOuterAlt(_localctx, 1);
				{
				setState(44); scriptMFile();
				}
				break;
			case FUNCTION:
				enterOuterAlt(_localctx, 2);
				{
				setState(45); functionMFile();
				}
				break;
			default:
				throw new NoViableAltException(this);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class FunctionMFileContext extends ParserRuleContext {
		public F_bodyContext f_body() {
			return getRuleContext(F_bodyContext.class,0);
		}
		public F_def_lineContext f_def_line() {
			return getRuleContext(F_def_lineContext.class,0);
		}
		public FunctionMFileContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_functionMFile; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof MATLABListener ) ((MATLABListener)listener).enterFunctionMFile(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof MATLABListener ) ((MATLABListener)listener).exitFunctionMFile(this);
		}
	}

	public final FunctionMFileContext functionMFile() throws RecognitionException {
		FunctionMFileContext _localctx = new FunctionMFileContext(_ctx, getState());
		enterRule(_localctx, 2, RULE_functionMFile);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(48); f_def_line();
			setState(49); f_body();
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class F_def_lineContext extends ParserRuleContext {
		public List<TerminalNode> ID() { return getTokens(MATLABParser.ID); }
		public List_referenceContext list_reference() {
			return getRuleContext(List_referenceContext.class,0);
		}
		public TerminalNode FUNCTION() { return getToken(MATLABParser.FUNCTION, 0); }
		public F_inputContext f_input() {
			return getRuleContext(F_inputContext.class,0);
		}
		public TerminalNode ID(int i) {
			return getToken(MATLABParser.ID, i);
		}
		public F_def_lineContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_f_def_line; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof MATLABListener ) ((MATLABListener)listener).enterF_def_line(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof MATLABListener ) ((MATLABListener)listener).exitF_def_line(this);
		}
	}

	public final F_def_lineContext f_def_line() throws RecognitionException {
		F_def_lineContext _localctx = new F_def_lineContext(_ctx, getState());
		enterRule(_localctx, 4, RULE_f_def_line);
		try {
			setState(67);
			switch ( getInterpreter().adaptivePredict(_input,1,_ctx) ) {
			case 1:
				enterOuterAlt(_localctx, 1);
				{
				setState(51); match(FUNCTION);
				setState(52); match(ID);
				setState(53); match(EQ);
				setState(54); match(ID);
				setState(55); f_input();
				}
				break;
			case 2:
				enterOuterAlt(_localctx, 2);
				{
				setState(56); match(FUNCTION);
				setState(57); match(ID);
				setState(58); f_input();
				}
				break;
			case 3:
				enterOuterAlt(_localctx, 3);
				{
				setState(59); match(FUNCTION);
				setState(60); list_reference();
				setState(61); match(EQ);
				setState(62); match(ID);
				setState(63); f_input();
				}
				break;
			case 4:
				enterOuterAlt(_localctx, 4);
				{
				setState(65); match(FUNCTION);
				setState(66); list_reference();
				}
				break;
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class F_inputContext extends ParserRuleContext {
		public F_argument_listContext f_argument_list() {
			return getRuleContext(F_argument_listContext.class,0);
		}
		public F_inputContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_f_input; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof MATLABListener ) ((MATLABListener)listener).enterF_input(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof MATLABListener ) ((MATLABListener)listener).exitF_input(this);
		}
	}

	public final F_inputContext f_input() throws RecognitionException {
		F_inputContext _localctx = new F_inputContext(_ctx, getState());
		enterRule(_localctx, 6, RULE_f_input);
		try {
			setState(76);
			switch ( getInterpreter().adaptivePredict(_input,2,_ctx) ) {
			case 1:
				enterOuterAlt(_localctx, 1);
				{
				}
				break;
			case 2:
				enterOuterAlt(_localctx, 2);
				{
				setState(70); match(LPAREN);
				setState(71); match(RPAREN);
				}
				break;
			case 3:
				enterOuterAlt(_localctx, 3);
				{
				setState(72); match(LPAREN);
				setState(73); f_argument_list();
				setState(74); match(RPAREN);
				}
				break;
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class F_argument_listContext extends ParserRuleContext {
		public TerminalNode ID() { return getToken(MATLABParser.ID, 0); }
		public F_argument_listContext f_argument_list() {
			return getRuleContext(F_argument_listContext.class,0);
		}
		public F_argument_listContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_f_argument_list; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof MATLABListener ) ((MATLABListener)listener).enterF_argument_list(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof MATLABListener ) ((MATLABListener)listener).exitF_argument_list(this);
		}
	}

	public final F_argument_listContext f_argument_list() throws RecognitionException {
		F_argument_listContext _localctx = new F_argument_listContext(_ctx, getState());
		enterRule(_localctx, 8, RULE_f_argument_list);
		try {
			setState(82);
			switch ( getInterpreter().adaptivePredict(_input,3,_ctx) ) {
			case 1:
				enterOuterAlt(_localctx, 1);
				{
				setState(78); match(ID);
				setState(79); match(COMMA);
				setState(80); f_argument_list();
				}
				break;
			case 2:
				enterOuterAlt(_localctx, 2);
				{
				setState(81); match(ID);
				}
				break;
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class F_bodyContext extends ParserRuleContext {
		public List<TerminalNode> NL() { return getTokens(MATLABParser.NL); }
		public StatementContext statement(int i) {
			return getRuleContext(StatementContext.class,i);
		}
		public List<StatementContext> statement() {
			return getRuleContexts(StatementContext.class);
		}
		public TerminalNode NL(int i) {
			return getToken(MATLABParser.NL, i);
		}
		public F_bodyContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_f_body; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof MATLABListener ) ((MATLABListener)listener).enterF_body(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof MATLABListener ) ((MATLABListener)listener).exitF_body(this);
		}
	}

	public final F_bodyContext f_body() throws RecognitionException {
		F_bodyContext _localctx = new F_bodyContext(_ctx, getState());
		enterRule(_localctx, 10, RULE_f_body);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(90);
			_errHandler.sync(this);
			_la = _input.LA(1);
			while ((((_la) & ~0x3f) == 0 && ((1L << _la) & ((1L << NL) | (1L << FOR) | (1L << GLOBAL) | (1L << IF) | (1L << RETURNS) | (1L << WHILE) | (1L << PLUS) | (1L << MINUS) | (1L << NEG) | (1L << LPAREN) | (1L << ID) | (1L << INT) | (1L << FLOAT))) != 0)) {
				{
				setState(88);
				switch (_input.LA(1)) {
				case FOR:
				case GLOBAL:
				case IF:
				case RETURNS:
				case WHILE:
				case PLUS:
				case MINUS:
				case NEG:
				case LPAREN:
				case ID:
				case INT:
				case FLOAT:
					{
					setState(84); statement();
					setState(85);
					_la = _input.LA(1);
					if ( !(_la==NL || _la==SEMI) ) {
					_errHandler.recoverInline(this);
					}
					consume();
					}
					break;
				case NL:
					{
					setState(87); match(NL);
					}
					break;
				default:
					throw new NoViableAltException(this);
				}
				}
				setState(92);
				_errHandler.sync(this);
				_la = _input.LA(1);
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class ScriptMFileContext extends ParserRuleContext {
		public List<TerminalNode> NL() { return getTokens(MATLABParser.NL); }
		public TerminalNode EOF() { return getToken(MATLABParser.EOF, 0); }
		public StatementContext statement(int i) {
			return getRuleContext(StatementContext.class,i);
		}
		public List<StatementContext> statement() {
			return getRuleContexts(StatementContext.class);
		}
		public TerminalNode NL(int i) {
			return getToken(MATLABParser.NL, i);
		}
		public ScriptMFileContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_scriptMFile; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof MATLABListener ) ((MATLABListener)listener).enterScriptMFile(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof MATLABListener ) ((MATLABListener)listener).exitScriptMFile(this);
		}
	}

	public final ScriptMFileContext scriptMFile() throws RecognitionException {
		ScriptMFileContext _localctx = new ScriptMFileContext(_ctx, getState());
		enterRule(_localctx, 12, RULE_scriptMFile);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(99);
			_errHandler.sync(this);
			_la = _input.LA(1);
			while ((((_la) & ~0x3f) == 0 && ((1L << _la) & ((1L << NL) | (1L << FOR) | (1L << GLOBAL) | (1L << IF) | (1L << RETURNS) | (1L << WHILE) | (1L << PLUS) | (1L << MINUS) | (1L << NEG) | (1L << LPAREN) | (1L << ID) | (1L << INT) | (1L << FLOAT))) != 0)) {
				{
				setState(97);
				switch (_input.LA(1)) {
				case FOR:
				case GLOBAL:
				case IF:
				case RETURNS:
				case WHILE:
				case PLUS:
				case MINUS:
				case NEG:
				case LPAREN:
				case ID:
				case INT:
				case FLOAT:
					{
					setState(93); statement();
					setState(94);
					_la = _input.LA(1);
					if ( !(_la==NL || _la==SEMI) ) {
					_errHandler.recoverInline(this);
					}
					consume();
					}
					break;
				case NL:
					{
					setState(96); match(NL);
					}
					break;
				default:
					throw new NoViableAltException(this);
				}
				}
				setState(101);
				_errHandler.sync(this);
				_la = _input.LA(1);
			}
			setState(102); match(EOF);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class StatementContext extends ParserRuleContext {
		public For_commandContext for_command() {
			return getRuleContext(For_commandContext.class,0);
		}
		public Return_commandContext return_command() {
			return getRuleContext(Return_commandContext.class,0);
		}
		public TerminalNode ID() { return getToken(MATLABParser.ID, 0); }
		public AssignmentContext assignment() {
			return getRuleContext(AssignmentContext.class,0);
		}
		public ExprContext expr() {
			return getRuleContext(ExprContext.class,0);
		}
		public Command_formContext command_form() {
			return getRuleContext(Command_formContext.class,0);
		}
		public If_commandContext if_command() {
			return getRuleContext(If_commandContext.class,0);
		}
		public Global_commandContext global_command() {
			return getRuleContext(Global_commandContext.class,0);
		}
		public While_commandContext while_command() {
			return getRuleContext(While_commandContext.class,0);
		}
		public StatementContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_statement; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof MATLABListener ) ((MATLABListener)listener).enterStatement(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof MATLABListener ) ((MATLABListener)listener).exitStatement(this);
		}
	}

	public final StatementContext statement() throws RecognitionException {
		StatementContext _localctx = new StatementContext(_ctx, getState());
		enterRule(_localctx, 14, RULE_statement);
		try {
			setState(113);
			switch ( getInterpreter().adaptivePredict(_input,8,_ctx) ) {
			case 1:
				enterOuterAlt(_localctx, 1);
				{
				setState(104); match(ID);
				}
				break;
			case 2:
				enterOuterAlt(_localctx, 2);
				{
				setState(105); assignment();
				}
				break;
			case 3:
				enterOuterAlt(_localctx, 3);
				{
				setState(106); expr(0);
				}
				break;
			case 4:
				enterOuterAlt(_localctx, 4);
				{
				setState(107); command_form();
				}
				break;
			case 5:
				enterOuterAlt(_localctx, 5);
				{
				setState(108); for_command();
				}
				break;
			case 6:
				enterOuterAlt(_localctx, 6);
				{
				setState(109); if_command();
				}
				break;
			case 7:
				enterOuterAlt(_localctx, 7);
				{
				setState(110); global_command();
				}
				break;
			case 8:
				enterOuterAlt(_localctx, 8);
				{
				setState(111); while_command();
				}
				break;
			case 9:
				enterOuterAlt(_localctx, 9);
				{
				setState(112); return_command();
				}
				break;
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class AssignmentContext extends ParserRuleContext {
		public Activity_referenceContext activity_reference() {
			return getRuleContext(Activity_referenceContext.class,0);
		}
		public ExprContext expr() {
			return getRuleContext(ExprContext.class,0);
		}
		public Entity_referenceContext entity_reference() {
			return getRuleContext(Entity_referenceContext.class,0);
		}
		public AssignmentContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_assignment; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof MATLABListener ) ((MATLABListener)listener).enterAssignment(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof MATLABListener ) ((MATLABListener)listener).exitAssignment(this);
		}
	}

	public final AssignmentContext assignment() throws RecognitionException {
		AssignmentContext _localctx = new AssignmentContext(_ctx, getState());
		enterRule(_localctx, 16, RULE_assignment);
		try {
			setState(123);
			switch ( getInterpreter().adaptivePredict(_input,9,_ctx) ) {
			case 1:
				enterOuterAlt(_localctx, 1);
				{
				setState(115); entity_reference();
				setState(116); match(EQ);
				setState(117); expr(0);
				}
				break;
			case 2:
				enterOuterAlt(_localctx, 2);
				{
				setState(119); activity_reference();
				setState(120); match(EQ);
				setState(121); expr(0);
				}
				break;
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class Entity_referenceContext extends ParserRuleContext {
		public TerminalNode ID() { return getToken(MATLABParser.ID, 0); }
		public Entity_referenceContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_entity_reference; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof MATLABListener ) ((MATLABListener)listener).enterEntity_reference(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof MATLABListener ) ((MATLABListener)listener).exitEntity_reference(this);
		}
	}

	public final Entity_referenceContext entity_reference() throws RecognitionException {
		Entity_referenceContext _localctx = new Entity_referenceContext(_ctx, getState());
		enterRule(_localctx, 18, RULE_entity_reference);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(125); match(ID);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class Activity_referenceContext extends ParserRuleContext {
		public TerminalNode ID() { return getToken(MATLABParser.ID, 0); }
		public Argument_listContext argument_list() {
			return getRuleContext(Argument_listContext.class,0);
		}
		public Activity_referenceContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_activity_reference; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof MATLABListener ) ((MATLABListener)listener).enterActivity_reference(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof MATLABListener ) ((MATLABListener)listener).exitActivity_reference(this);
		}
	}

	public final Activity_referenceContext activity_reference() throws RecognitionException {
		Activity_referenceContext _localctx = new Activity_referenceContext(_ctx, getState());
		enterRule(_localctx, 20, RULE_activity_reference);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(127); match(ID);
			setState(128); match(LPAREN);
			setState(129); argument_list();
			setState(130); match(RPAREN);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class Argument_listContext extends ParserRuleContext {
		public ExprContext expr() {
			return getRuleContext(ExprContext.class,0);
		}
		public Argument_listContext argument_list() {
			return getRuleContext(Argument_listContext.class,0);
		}
		public Argument_listContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_argument_list; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof MATLABListener ) ((MATLABListener)listener).enterArgument_list(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof MATLABListener ) ((MATLABListener)listener).exitArgument_list(this);
		}
	}

	public final Argument_listContext argument_list() throws RecognitionException {
		Argument_listContext _localctx = new Argument_listContext(_ctx, getState());
		enterRule(_localctx, 22, RULE_argument_list);
		try {
			setState(141);
			switch ( getInterpreter().adaptivePredict(_input,10,_ctx) ) {
			case 1:
				enterOuterAlt(_localctx, 1);
				{
				setState(132); match(COLON);
				}
				break;
			case 2:
				enterOuterAlt(_localctx, 2);
				{
				setState(133); expr(0);
				}
				break;
			case 3:
				enterOuterAlt(_localctx, 3);
				{
				setState(134); match(COLON);
				setState(135); match(COMMA);
				setState(136); argument_list();
				}
				break;
			case 4:
				enterOuterAlt(_localctx, 4);
				{
				setState(137); expr(0);
				setState(138); match(COMMA);
				setState(139); argument_list();
				}
				break;
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}
